# llm_guardrail

./: .gitignore  Makefile  README.md  docker-compose.yml  download_models.py  models.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
llm_guardrail/: __init__.py  config.py  dataset.py  features.py  plots.py
llm_guardrail/modeling/: predict.py  test_baseline_model.py  train.py
llm_guardrail/modeling/generator/: Dockerfile  requirements.txt
llm_guardrail/modeling/generator/src/: app.py
llm_guardrail/modeling/guardrail/: Dockerfile
llm_guardrail/modeling/guardrail/src/: app.py
test/: conftest.py  test_e2e_real.py  test_evaluation.py  test_unit.py
