[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "llm_guardrail"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "IT2" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["llm_guardrail"]
include = ["pyproject.toml", "llm_guardrail/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["llm_guardrail"]
force-sort-within-sections = true

